--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<html><body><h1>Hello from Jenkins to S3\!</h1></body></html>
+<html><body><h1>Hello from Jenkins to S3, Welcome to Website\!</h1></body></html>
 <!-- index.html -->
 <html>
 <head><title>My Static Website</title></head>
 <body><h1>Hello from Jenkins to S3!</h1></body>
 </html>
-...
